# esupath

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vc_bld.bat
src/: cmd_line_args.hpp  esupath.cpp
src/batch/: coreutilsPrio.bat
test/: test.bat
test/src/: advanced.txt  e.txt  options.txt  s.txt  u.txt
